--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,20 +16,14 @@ jobs:
       - name: Install LLVM (Windows)
         if: matrix.os == 'windows-latest'
         run: choco install llvm
+
       - name: Installing needed Ubuntu dependencies
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y libasound2-dev
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
+
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: "12"
-      - run: npm install --global neon-cli
-      - run: neon build --release
+
+      - run: cargo build --release
