--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neon-miniaudio",
   "version": "0.1.2",
-  "description": "Miniaudio for Node.js",
+  "description": "Miniaudio for Node.js. Music play library",
   "main": "lib/index.js",
   "types": "index.d.ts",
   "repository": {
